[package]
name = "LCAP"
description = "Lightweight craft authenticator, portable."
version = "0.2.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
gumdrop = "0.8.1"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
saucers = { git = "https://github.com/skjsjhb/saucers.git", tag = "v0.1.2-6.0.1" }
screen_size = "0.1.0"

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true
